--- a/edge-server/src/main/resources/bootstrap.yml
+++ b/edge-server/src/main/resources/bootstrap.yml
@@ -1,6 +1,20 @@
+info:
+  component: Edge server (based on Netflix Zuul)
+
 spring:
-    application:
-        name: edge-server
-    cloud:
-        config:
-            uri: http://localhost:9090
+  application:
+    name: edge-server
+  cloud:
+    config:
+      failFast: true
+      retry:
+        initialInterval: 3000
+        multiplier: 1.3
+        maxInterval: 5000
+        maxAttempts: 20
+      discovery:
+        serviceId: config-server
+        enabled: false
+      uri: https://localhost:9090
+
+#eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
